--- a/app/index.html
+++ b/app/index.html
@@ -22,12 +22,10 @@
 
         <div class="container">
             <div class="header">
-                <ul class="nav nav-pills pull-right">
-                    <li>
-                        <div class="logo"></div>
-                    </li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
+                <ul class="nav nav-pills">
+                    <li class="logo"></li>
+                    <li class="pull-right"><a href="#">About</a></li>
+                    <li class="pull-right"><a href="#">Contact</a></li>
                 </ul>
             </div>
 
