--- a/app/index.html
+++ b/app/index.html
@@ -23,6 +23,8 @@
         <div class="header">
             <div class="container head">
             <img class="logo" src="images/logo.jpg">
+            <div class="paper">
+            </div>
                 <ul class="nav nav-pills pull-right  links">
                     <li class="pull-right"><a href="#">Contact</a></li>
                     <li class="pull-right"><a href="#">Contact</a></li>
@@ -39,17 +41,13 @@
             
         <div class="jumbotron">
             <div class="container">
-                <div class="row">
-                    <div class="col-lg-12 logo">
-                        <h2>Draft List</h2>
-                    </div>
-                </div>
+
             </div>
         </div>
 
         <div class="row marketing">
             <div class="col-lg-6">
-                <h1>asdasd</h1>
+                <h1></h1>
             </div>
         </div>
 
