almost done styling header

--- a/app/index.html
+++ b/app/index.html
@@ -22,19 +22,25 @@
   
         <div class="header">
             <div class="container head">
-            <img class="logo" src="images/logo.jpg">
-            <div class="paper">
-            </div>
+            <!-- <img class="logo" src="images/logo.jpg"> -->
+                <div class="wesb">
+                    <span id="west-end">West End</span> 
+                    <br> 
+                    <span id="string-band"> String Band</span>
+                </div>
+                <div class="bandpic"></div>
+                <div class="layer-1"></div>
+                <div class="layer-2"></div>
+                <div class="layer-3"></div>
                 <ul class="nav nav-pills pull-right  links">
                     <li class="pull-right"><a href="#">Contact</a></li>
                     <li class="pull-right"><a href="#">Contact</a></li>
                     <li class="pull-right"><a href="#">Contact</a></li>
-                    <li class="pull-right"><a href="#">About</a></li>
-                    <li class="pull-right"><a href="#">Shows</a></li>
+                    <li class="pull-right"><a href="#">About</a></li>    <li class="pull-right"><a href="#">Shows</a></li>
                 </ul>
                 <ul class="pull-right icons">
-                    <li class="ss-facebook facebook"></li>
-                    <li><img src="http://www.elkanky.com/files/cdbaby%20logo.png"></li>
+                        <!-- <li class="ss-facebook facebook"></li> -->
+                        <!-- <li><img src="http://www.elkanky.com/files/cdbaby%20logo.png"></li> -->
                 </ul>
             </div>
         </div>
