set min width on header

--- a/app/index.html
+++ b/app/index.html
@@ -28,10 +28,12 @@
                     <br> 
                     <span id="string-band"> String Band</span>
                 </div>
-                <div class="bandpic"></div>
-                <div class="layer-1"></div>
-                <div class="layer-2"></div>
-                <div class="layer-3"></div>
+                <div class="frame">
+                    <div class="bandpic"></div>
+                    <div class="layer-1"></div>
+                    <div class="layer-2"></div>
+                    <div class="layer-3"></div>
+                </div>
                 <ul class="nav nav-pills pull-right  links">
                     <li class="pull-right"><a href="#">Contact</a></li>
                     <li class="pull-right"><a href="#">Contact</a></li>
