--- a/app/index.html
+++ b/app/index.html
@@ -21,20 +21,30 @@
         <![endif]-->
   
         <div class="header">
-            <div class="container head">
+            <!-- <img src="images/instruments.jpg"> -->
+            <div class="overlay">
+                <div class="container head">
+                    <div class="nav-items">
+                        <ul>
+                            <li><a href="#">About</a></li>
+                            <li><a href="#">Shows</a></li>
+                            <li><a href="#">Contact</a></li>
+                            <li><a href="#">Connect</a></li>
+                        </ul>
+                    </div>
+                    <h1>WEST END <br> STRING BAND</h1>
+                </div>
+            </div>
+        </div>
+
             <!-- <img class="logo" src="images/logo.jpg"> -->
-                <div class="wesb">
+<!--                 <div class="wesb">
                     <span id="west-end">West End</span> 
                     <br> 
                     <span id="string-band"> String Band</span>
-                </div>
-                <div class="frame">
-                    <div class="bandpic"></div>
-                    <div class="layer-1"></div>
-                    <div class="layer-2"></div>
-                    <div class="layer-3"></div>
-                </div>
-                <h4>"Bluegrass and acoustic music for any occassion"</h4>
+                </div> -->
+
+                <!-- <h4>"Bluegrass and acoustic music for any occassion"</h4> -->
 <!--                 <ul class="nav nav-pills pull-right  links">
                     <li class="pull-right"><a href="#">Contact</a></li>
                     <li class="pull-right"><a href="#">Shows</a></li>
@@ -43,12 +53,17 @@
                      <!-- <li class="ss-facebook facebook"></li>  -->
                         <!-- <li><img src="http://www.elkanky.com/files/cdbaby%20logo.png"></li> -->
                 <!-- </ul> -->
-            </div>
-        </div>
             
         <div class="jumbotron">
             <div class="container">
-                <!-- <div class="col-md-6 pull-right"> -->
+                <div class="band">
+                    <div class="frame">
+                        <div class="bandpic"></div>
+                        <div class="layer-1"></div>
+                    </div>
+                </div>
+                <div class="bio">
+                    <h2>Who we are</h2>
                     <p>The West End String Band is an exciting combination of musicians dedicated to playing and performing traditional bluegrass, old country, and roots music with modern appeal. 
                     <br> 
                     <br> 
@@ -59,6 +74,21 @@
                     <br>
                     <br>
                     They were ecstatic when Jim Rollins joined the group with his superb banjo playing and high lonesome vocals. Jim Rollins, a Clemson graduate, hails from the DC area, and currently lives in Simpsonville, SC. His style, though steeped in traditional bluegrass, is versatile and creative. Jim’s voice will pull your heartstrings. He has had the honor of being a Sunny Mountain Boy with Jimmy Martin, as well as playing tour dates with Dale Ann Bradley, The Blinky Moon Boys and many others. Matt Purinton, of Six Mile, SC, adds his unique mandolin and rich baritone voice to the West End String Band sound. Matt previously played and toured extensively with Narrow Gauge Band and the Ashley Caudill Band.</p>
+                </div>  
+
+                <div class="holder">
+                <div class="box"></div>
+                </div>
+<!--                 <div class="band">
+                    <div class="frame">
+                        <div class="bandpic"></div>
+                        <div class="layer-1"></div>
+                        <div class="layer-2"></div>
+                        <div class="layer-3"></div>
+                    </div>
+                </div> -->
+                <!-- <div class="col-md-6 pull-right"> -->
+                    
                 <!-- </div> -->
                     <!-- <img class="group-pic" src="images/bandpic.png"> -->
                 <!-- <div class="col-md-6 main-right"> -->
