--- a/app/index.html
+++ b/app/index.html
@@ -57,10 +57,10 @@
         <div class="jumbotron">
             <div class="container">
                 <div class="band">
-                    <div class="frame">
+                    <!-- <div class="frame"> -->
                         <div class="bandpic"></div>
                         <div class="layer-1"></div>
-                    </div>
+                    <!-- </div> -->
                 </div>
                 <div class="bio">
                     <h2>Who we are</h2>
@@ -70,15 +70,11 @@
                     Charlie McDaniel, guitar and vocals, moved to the upstate area about 20 years ago from Rutherford County, N.C. He was a member of the popular regional band, Hickory Flat, for over 20 years. Hickory Flat brought home a top 10 finish in the SPGMA bluegrass band world championship, followed by several busy years on the festival circuit. Charlie‘s soulful singing puts the blues in bluegrass. 
                     <br>
                     <br>
-                    After moving to Greenville, Charlie met his wife-to-be Kathy. She grew up singing American traditional songs with her father in Northwestern Ohio. As a percussionist in high school, she won the Louis Armstrong Jazz Award for piano. Kathy became a die-hard bluegrass fan the first time she attended the popular Pickin’ at Pickens Bluegrass Festival. After going to bluegrass jams and shows with Charlie, she decided to take up a new instrument. Her great timing and true love for the music made the bass a great choice for her. She anchors the group now with her rock solid timing and harmony vocals. Charlie and Kathy played around Greenville for a year or so as a duet, playing bluegrass, folk, and acoustic blues, always longing for a banjo to take their music back to its traditional roots. 
+                    After moving to Greenville, Charlie met his wife-to-be Kathy. She grew up singing American traditional songs with her father in Northwestern Ohio. Kathy won the Louis Armstrong Jazz Award for piano. She became a die-hard bluegrass fan the first time she attended the popular Pickin’ at Pickens Bluegrass Festival. After going to bluegrass jams and shows with Charlie, she decided to take up a new instrument. Her great timing and true love for the music made the bass a great choice for her. She anchors the group now with her rock solid timing and harmony vocals. 
                     <br>
                     <br>
                     They were ecstatic when Jim Rollins joined the group with his superb banjo playing and high lonesome vocals. Jim Rollins, a Clemson graduate, hails from the DC area, and currently lives in Simpsonville, SC. His style, though steeped in traditional bluegrass, is versatile and creative. Jim’s voice will pull your heartstrings. He has had the honor of being a Sunny Mountain Boy with Jimmy Martin, as well as playing tour dates with Dale Ann Bradley, The Blinky Moon Boys and many others. Matt Purinton, of Six Mile, SC, adds his unique mandolin and rich baritone voice to the West End String Band sound. Matt previously played and toured extensively with Narrow Gauge Band and the Ashley Caudill Band.</p>
                 </div>  
-
-                <div class="holder">
-                <div class="box"></div>
-                </div>
 <!--                 <div class="band">
                     <div class="frame">
                         <div class="bandpic"></div>
