styling connect section

--- a/app/index.html
+++ b/app/index.html
@@ -78,42 +78,61 @@
             </div>
         </div>
 
-
-
-
-
-
-              <!--                 <div class="band">
-                    <div class="frame">
-                        <div class="bandpic"></div>
-                        <div class="layer-1"></div>
-                        <div class="layer-2"></div>
-                        <div class="layer-3"></div>
-                    </div>
-                </div> -->
-                <!-- <div class="col-md-6 pull-right"> -->
-                    
-                <!-- </div> -->
-                    <!-- <img class="group-pic" src="images/bandpic.png"> -->
-                <!-- <div class="col-md-6 main-right"> -->
-
-                <!-- </div> -->
-                <div class="jumbotron shows-section">
-                    <h2>UPCOMING SHOWS</h2>
-                    <div class="shows">
-                        <ul>
-                            <li>
-                                <h3>1/12/14</h3>
-                                <span>Intl Ale House</span>
-                            </li>
-                            <li><h3>heherher</h3></li>
-                            <li><h3>heherher</h3></li>
-                            <li><h3>heherher</h3></li>
-                        </ul>   
-                    </div>
+            <div class="jumbotron shows-section">
+                <h2>UPCOMING SHOWS</h2>
+                <div class="shows">
+                    <ul>
+                        <li>
+                            <h3>1/12/14</h3>
+                            <span>Intl Ale House</span>
+                        </li>
+                        <li><h3>heherher</h3></li>
+                        <li><h3>heherher</h3></li>
+                        <li><h3>heherher</h3></li>
+                    </ul>   
                 </div>
+            </div>
+
+            <div class="jumbotron connect">
+                <div class="container">
+                    <h2>FIND US ON THE WEB</h2>
+                    <ul class="icons">
+                        <a href="">
+                            <li>
+                                <img class="cd-baby"src="images/cdbaby.png">
+                            </li>
+                        </a>
+                        <a href="">
+                            <li>
+                                <img class="gig-masters" src="images/gigmasters.png">
+                            </li>
+                        </a>
+                        <a href="">
+                            <li>
+                                <img class="gig-salad"src="images/gigsalad.png">
+                            </li>
+                        </a>
+                        <a href="">
+                            <li>
+                                <img src="images/rn.png">
+                            </li>
+                        </a>
+                        <a href="">
+                            <li>
+                                <img class="wedding-wire" src="images/weddingwire.png">
+                            </li>
+                        </a>
+                        <li></li>
+                        <li></li>
+                    </ul>
+
+                </div>
+            </div>
+
             <div class="footer">
-              
+                <div class="container">
+                    <div class="ss-mail"></div>
+                </div>
             </div>
 
 
