pushing for the evening

--- a/app/index.html
+++ b/app/index.html
@@ -83,43 +83,56 @@
                 <div class="shows">
                     <ul>
                         <li>
-                            <h3>1/12/14</h3>
-                            <span>Intl Ale House</span>
+                            <h3>2/6/14</h3>
+                            <span>185 King Street</span>
+                            <span class="pull-right">Brevard, NC</span>
                         </li>
-                        <li><h3>heherher</h3></li>
-                        <li><h3>heherher</h3></li>
-                        <li><h3>heherher</h3></li>
+                        <li>
+                            <h3>2/8/14</h3>
+                            <span>Bluegrass Block Party - BBQ Joing</span>
+                            <span class="pull-right">N. Charleston, SC</span>
+                        </li>
+                        <li>
+                            <h3>2/13/14</h3>
+                            <span>Private Valentine's Part</span>
+                            <span class="pull-right">Greenville, SC</span>
+                        </li>
+                        <li>
+                            <h3>2/16/14</h3>
+                            <span>Pfister Wedding</span>
+                            <span class="pull-right">Greer, SC</span>
+                        </li>
                     </ul>   
                 </div>
             </div>
 
             <div class="jumbotron connect">
                 <div class="container">
-                    <h2>FIND US ON THE WEB</h2>
+                    <h2 id="find">FIND US ON THE WEB</h2>
                     <ul class="icons">
-                        <a href="">
+                        <a href="http://www.cdbaby.com/cd/westendstringband">
                             <li>
-                                <img class="cd-baby"src="images/cdbaby.png">
+                                <div class="cd-baby"></div>
                             </li>
                         </a>
-                        <a href="">
+                          <a target="_blank" href="http://www.gigmasters.com/bluegrass-band/West-End-String-Band">
                             <li>
-                                <img class="gig-masters" src="images/gigmasters.png">
+                                <div class="gig-masters"></div>
                             </li>
                         </a>
-                        <a href="">
+                        <a target="_blank" href="http://www.reverbnation.com/westendstringband">
                             <li>
-                                <img class="gig-salad"src="images/gigsalad.png">
+                                <div class="reverb"></div>
                             </li>
                         </a>
-                        <a href="">
+                        <a target="_blank" href="http://www.weddingwire.com/biz/west-end-string-band-greenville/a17501035911d8f0.html">
                             <li>
-                                <img src="images/rn.png">
+                                <div class="wedding-wire"></div>
                             </li>
                         </a>
-                        <a href="">
+                        <a target="_blank" href="http://www.gigsalad.com/west_end_string_band_greenville">
                             <li>
-                                <img class="wedding-wire" src="images/weddingwire.png">
+                                <div class="gig-salad"></div>
                             </li>
                         </a>
                         <li></li>
@@ -131,7 +144,9 @@
 
             <div class="footer">
                 <div class="container">
-                    <div class="ss-mail"></div>
+                    <a href="mailto:joe@gdgd.com">
+                        <div class="ss-mail"></div>
+                    </a>
                 </div>
             </div>
 
