finializing stylings and added CNAME

--- a/app/index.html
+++ b/app/index.html
@@ -6,12 +6,13 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>wesb</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width">
+        <title>West End String Band</title>
+        <meta name="description" content="Bluegrass, folk, pickin music from Greenville, SC">
+        <meta name="viewport" content="width=device-width, user-scalable=no">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
         <!-- build:css(.tmp) styles/main.css -->
         <link rel="stylesheet" href="styles/main.css">
+        <link href="ss-gizmo/webfonts/ss-gizmo.css" rel="stylesheet"/>
         <link href="ss-social/webfonts/ss-social.css" rel="stylesheet"/>
         <!-- endbuild -->
     </head>
@@ -26,10 +27,10 @@
                 <div class="container head">
                     <div class="nav-items">
                         <ul>
-                            <li><a href="#">About</a></li>
-                            <li><a href="#">Shows</a></li>
-                            <li><a href="#">Contact</a></li>
-                            <li><a href="#">Connect</a></li>
+                            <li><a href="#about">About</a></li>
+                            <li><a href="#shows">Shows</a></li>
+                            <li><a href="#connect">Connect</a></li>
+                            <li><a href="#contact">Contact</a></li>
                         </ul>
                     </div>
                     <h1>WEST END <br> STRING BAND</h1>
@@ -55,7 +56,7 @@
                 <!-- </ul> -->
             
         <div class="jumbotron">
-            <div class="container">
+            <div class="container main">
                 <div class="band">
                     <!-- <div class="frame"> -->
                         <div class="bandpic"></div>
@@ -63,6 +64,7 @@
                     <!-- </div> -->
                 </div>
                 <div class="bio">
+                    <a name="about"></a>
                     <h2>WHO WE ARE</h2>
                     <p>The West End String Band is an exciting combination of musicians dedicated to playing and performing traditional bluegrass, old country, and roots music with modern appeal. 
                     <br> 
@@ -78,9 +80,11 @@
             </div>
         </div>
 
-            <div class="jumbotron shows-section">
+            <div class="jumbotron shows-section" name="shows">
+                <a name="shows">
                 <h2>UPCOMING SHOWS</h2>
                 <div class="shows">
+                </a>
                     <ul>
                         <li>
                             <h3>2/6/14</h3>
@@ -106,8 +110,9 @@
                 </div>
             </div>
 
-            <div class="jumbotron connect">
+            <div class="jumbotron connect" name="connect">
                 <div class="container">
+                    <a name="connect"></a>
                     <h2 id="find">FIND US ON THE WEB</h2>
                     <ul class="icons">
                         <a href="http://www.cdbaby.com/cd/westendstringband">
@@ -135,8 +140,6 @@
                                 <div class="gig-salad"></div>
                             </li>
                         </a>
-                        <li></li>
-                        <li></li>
                     </ul>
 
                 </div>
@@ -144,9 +147,21 @@
 
             <div class="footer">
                 <div class="container">
-                    <a href="mailto:joe@gdgd.com">
-                        <div class="ss-mail"></div>
-                    </a>
+                    <a name="contact"></a>
+                    <h3>CONNECT</h3>
+                    <ul class="info">
+                        <a href="mailto:charles.mcdaniel@charter.net">
+                            <li class="ss-social ss-mail"></li>
+                            <li class="contact-text">Charles McDaniel</li>
+                        </a>
+                        <li class="ss-gizmo ss-phone"></li>
+                        <li class="contact-text">(864)270-5427</li>
+                        <a href="http://new.livestream.com/feedandseedlive/events/2052521/videos/17516370">
+                            <li>
+                                <div class="livestream"></div>
+                            </li>
+                        </a>
+                    </ul>
                 </div>
             </div>
 
