removed logo and added smooth scrolling

--- a/app/index.html
+++ b/app/index.html
@@ -57,15 +57,14 @@
             
         <div class="jumbotron">
             <div class="container main">
+                <div class="bio">
                 <div class="band">
-                    <!-- <div class="frame"> -->
                         <div class="bandpic"></div>
                         <div class="layer-1"></div>
-                    <!-- </div> -->
                 </div>
-                <div class="bio">
                     <a name="about"></a>
                     <h2>WHO WE ARE</h2>
+                    <br>
                     <p>The West End String Band is an exciting combination of musicians dedicated to playing and performing traditional bluegrass, old country, and roots music with modern appeal. 
                     <br> 
                     <br> 
@@ -148,7 +147,7 @@
             <div class="footer">
                 <div class="container">
                     <a name="contact"></a>
-                    <h3>CONNECT</h3>
+                    <h3>GET IN TOUCH</h3>
                     <ul class="info">
                         <a href="mailto:charles.mcdaniel@charter.net">
                             <li class="ss-social ss-mail"></li>
