fixing ss link tags

--- a/app/index.html
+++ b/app/index.html
@@ -11,9 +11,9 @@
         <meta name="viewport" content="width=device-width, user-scalable=no">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
         <!-- build:css(.tmp) styles/main.css -->
+        <link rel="stylesheet" href="ss-gizmo/webfonts/ss-gizmo.css"/>
+        <link rel="stylesheet" href="ss-social/webfonts/ss-social.css"/>
         <link rel="stylesheet" href="styles/main.css">
-        <link href="ss-gizmo/webfonts/ss-gizmo.css" rel="stylesheet"/>
-        <link href="ss-social/webfonts/ss-social.css" rel="stylesheet"/>
         <!-- endbuild -->
     </head>
     <body>
