fixing typos and changing ww to fb

--- a/app/index.html
+++ b/app/index.html
@@ -97,7 +97,7 @@
                         </li>
                         <li>
                             <h3>2/13/14</h3>
-                            <span>Private Valentine's Part</span>
+                            <span>Private Valentine's Party</span>
                             <span class="pull-right">Greenville, SC</span>
                         </li>
                         <li>
@@ -129,9 +129,9 @@
                                 <div class="reverb"></div>
                             </li>
                         </a>
-                        <a target="_blank" href="http://www.weddingwire.com/biz/west-end-string-band-greenville/a17501035911d8f0.html">
+                        <a target="_blank" href="https://www.facebook.com/pages/West-End-String-Band/112872873616">
                             <li>
-                                <div class="wedding-wire"></div>
+                                <div class="fb"></div>
                             </li>
                         </a>
                         <a target="_blank" href="http://www.gigsalad.com/west_end_string_band_greenville">
