--- a/app/index.html
+++ b/app/index.html
@@ -86,24 +86,39 @@
                 </a>
                     <ul>
                         <li>
-                            <h3>2/6/14</h3>
-                            <span>185 King Street</span>
+                            <h3>3/7/14</h3>
+                            <span>Oskar Blues</span>
                             <span class="pull-right">Brevard, NC</span>
                         </li>
                         <li>
-                            <h3>2/8/14</h3>
-                            <span>Bluegrass Block Party - BBQ Joing</span>
-                            <span class="pull-right">N. Charleston, SC</span>
-                        </li>
-                        <li>
-                            <h3>2/13/14</h3>
-                            <span>Private Valentine's Party</span>
+                            <h3>3/22/14</h3>
+                            <span>Southern Culture</span>
                             <span class="pull-right">Greenville, SC</span>
                         </li>
                         <li>
-                            <h3>2/16/14</h3>
-                            <span>Pfister Wedding</span>
-                            <span class="pull-right">Greer, SC</span>
+                            <h3>3/29/14</h3>
+                            <span>Barley's</span>
+                            <span class="pull-right">Spindale, NC</span>
+                        </li>
+                        <li>
+                            <h3>4/5/14</h3>
+                            <span>Feed & Seed</span>
+                            <span class="pull-right">Fletcher, NC</span>
+                        </li>
+                        <li>
+                            <h3>4/11/14</h3>
+                            <span>Carowinds</span>
+                            <span class="pull-right">Charlotte, NC</span>
+                        </li>
+                        <li>
+                            <h3>4/18/14</h3>
+                            <span>Merck Mtn. Festival</span>
+                            <span class="pull-right">Pickens, SC</span>
+                        </li>
+                        <li>
+                            <h3>4/20/14</h3>
+                            <span>Carowinds</span>
+                            <span class="pull-right">Charlotte, NC</span>
                         </li>
                     </ul>   
                 </div>
@@ -155,7 +170,7 @@
                         </a>
                         <li class="ss-gizmo ss-phone"></li>
                         <li class="contact-text">(864)270-5427</li>
-                        <a href="http://new.livestream.com/feedandseedlive/events/2052521/videos/17516370">
+                        <a target="_blank" href="http://new.livestream.com/feedandseedlive/events/2052521/videos/17516370">
                             <li>
                                 <div class="livestream"></div>
                             </li>
