--- a/app/index.html
+++ b/app/index.html
@@ -74,7 +74,17 @@
                     After moving to Greenville, Charlie met his wife-to-be Kathy. She grew up singing American traditional songs with her father in Northwestern Ohio. Kathy won the Louis Armstrong Jazz Award for piano. She became a die-hard bluegrass fan the first time she attended the popular Pickin’ at Pickens Bluegrass Festival. After going to bluegrass jams and shows with Charlie, she decided to take up a new instrument. Her great timing and true love for the music made the bass a great choice for her. She anchors the group now with her rock solid timing and harmony vocals. 
                     <br>
                     <br>
-                    Jim Rollins joined the group with his superb banjo playing and high lonesome vocals. A Clemson graduate hailing from the DC area, Jim's style, while steeped in traditional bluegrass, is versatile and creative. Jim’s voice will pull your heartstrings. He has had the honor of being a Sunny Mountain Boy with Jimmy Martin, as well as playing tour dates with Dale Ann Bradley, The Blinky Moon Boys and many others. Matt Purinton, of Six Mile, SC, adds his unique mandolin and rich baritone voice to the West End String Band sound. Matt previously played and toured extensively with Narrow Gauge Band and the Ashley Caudill Band.</p>
+                    <a href="https://itunes.apple.com/us/album/dirty-old-town/id886646829" target="_blank">
+                        <img class="cd-cover" src="images/dirty-old-town.jpg">
+                    </a>
+                    Jim Rollins joined the group with his superb banjo playing and high lonesome vocals. A Clemson graduate hailing from the DC area, Jim's style, while steeped in traditional bluegrass, is versatile and creative. Jim’s voice will pull your heartstrings. He has had the honor of being a Sunny Mountain Boy with Jimmy Martin, as well as playing tour dates with Dale Ann Bradley, The Blinky Moon Boys and many others. Matt Purinton, of Six Mile, SC, adds his unique mandolin and rich baritone voice to the West End String Band sound. Matt previously played and toured extensively with Narrow Gauge Band and the Ashley Caudill Band.
+                    <br>
+                    <br>
+                    West End String Band has released a new CD titled "Dirty Old Town". 
+                    
+                    <br>
+                    Check it out on <a href="https://itunes.apple.com/us/album/dirty-old-town/id886646829" target="_blank">iTunes.</a>
+                    </p>
                 </div> 
             </div>
         </div>
@@ -86,39 +96,54 @@
                 </a>
                     <ul>
                         <li>
-                            <h3>3/7/14</h3>
-                            <span>Oskar Blues</span>
-                            <span class="pull-right">Brevard, NC</span>
+                            <h3>7/18</h3>
+                            <span>Ride to Remember(Alzheimer's benefit)</span>
+                            <span class="pull-right">Lake Murray, SC</span>
                         </li>
                         <li>
-                            <h3>3/22/14</h3>
-                            <span>Southern Culture</span>
+                            <h3>7/19</h3>
+                            <span>Spruce Pine BBQ & Bluegrass Festival (5:30-6:30)</span>
+                            <span class="pull-right">Laurens, SC</span>
+                        </li>
+                        <li>
+                            <h3>7/24</h3>
+                            <span>Savvy's public small business block party (6-9)</span>
+                            <span class="pull-right">1803 Augusta Road</span>
+                        </li>
+                        <li>
+                            <h3>7/25</h3>
+                            <span>Gratifly Music & Arts Festival</span>
+                            <span class="pull-right">Avalon, SC</span>
+                        </li>
+                        <li>
+                            <h3>8/1</h3>
+                            <span>Chimney Rock</span>
+                            <span class="pull-right">Chimney Rock, NC</span>
+                        </li>
+                        <li>
+                            <h3>8/2</h3>
+                            <span>TD Greenville's Farmer Markey</span>
                             <span class="pull-right">Greenville, SC</span>
                         </li>
                         <li>
-                            <h3>3/29/14</h3>
-                            <span>Barley's</span>
-                            <span class="pull-right">Spindale, NC</span>
-                        </li>
-                        <li>
-                            <h3>4/5/14</h3>
-                            <span>Feed & Seed</span>
+                            <h3>8/2</h3>
+                            <span>Feed and Seed (7-9pm)</span>
                             <span class="pull-right">Fletcher, NC</span>
                         </li>
                         <li>
-                            <h3>4/11/14</h3>
-                            <span>Carowinds</span>
-                            <span class="pull-right">Charlotte, NC</span>
+                            <h3>8/16</h3>
+                            <span>Traveler's Rest Farmer's Market (am)</span>
+                            <span class="pull-right">Traveler's Rest, SC</span>
                         </li>
                         <li>
-                            <h3>4/18/14</h3>
-                            <span>Merck Mtn. Festival</span>
-                            <span class="pull-right">Pickens, SC</span>
+                            <h3>8/16</h3>
+                            <span>Fountain Inn Bluegrass Series (7-9pm)</span>
+                            <span class="pull-right">Traveler's Rest, SC</span>
                         </li>
                         <li>
-                            <h3>4/20/14</h3>
-                            <span>Carowinds</span>
-                            <span class="pull-right">Charlotte, NC</span>
+                            <h3>8/24</h3>
+                            <span>Private Party</span>
+                            <span class="pull-right"></span>
                         </li>
                     </ul>   
                 </div>
