added sept dates

--- a/app/index.html
+++ b/app/index.html
@@ -89,6 +89,7 @@
             </div>
         </div>
 
+
             <div class="jumbotron shows-section" name="shows">
                 <a name="shows">
                     <h2>UPCOMING SHOWS</h2>
@@ -96,59 +97,68 @@
                 <div class="shows">
                     <ul>
                         <li>
-                            <h3>7/18</h3>
-                            <span>Ride to Remember(Alzheimer's benefit)</span>
-                            <span class="pull-right">Lake Murray, SC</span>
-                        </li>
-                        <li>
-                            <h3>7/19</h3>
-                            <span>Spruce Pine BBQ & Bluegrass Festival (5:30-6:30)</span>
-                            <span class="pull-right">Laurens, SC</span>
-                        </li>
-                        <li>
-                            <h3>7/24</h3>
-                            <span>Savvy's public small business block party (6-9)</span>
-                            <span class="pull-right">1803 Augusta Road</span>
-                        </li>
-                        <li>
-                            <h3>7/25</h3>
-                            <span>Gratifly Music & Arts Festival</span>
-                            <span class="pull-right">Avalon, SC</span>
-                        </li>
-                        <li>
-                            <h3>8/1</h3>
-                            <span>Chimney Rock</span>
-                            <span class="pull-right">Chimney Rock, NC</span>
-                        </li>
-                        <li>
-                            <h3>8/2</h3>
-                            <span>TD Greenville's Farmer Markey</span>
-                            <span class="pull-right">Greenville, SC</span>
-                        </li>
-                        <li>
-                            <h3>8/2</h3>
-                            <span>Feed and Seed (7-9pm)</span>
-                            <span class="pull-right">Fletcher, NC</span>
-                        </li>
-                        <li>
-                            <h3>8/16</h3>
-                            <span>Traveler's Rest Farmer's Market (am)</span>
-                            <span class="pull-right">Traveler's Rest, SC</span>
-                        </li>
-                        <li>
-                            <h3>8/16</h3>
-                            <span>Fountain Inn Bluegrass Series (7-9pm)</span>
-                            <span class="pull-right">Traveler's Rest, SC</span>
-                        </li>
-                        <li>
-                            <h3>8/24</h3>
-                            <span>Private Party</span>
+                            <h3>9/4</h3>
+                            <span>Emeritus at Anderson Place: Alzheimer’s Fundraiser</span>
                             <span class="pull-right"></span>
+                        </li>
+                        <li>
+                            <h3>9/5</h3>
+                            <span>Wedding Rehearsal Party at Cliffs Mountain Barn</span>
+                            <span class="pull-right"></span>
+                        </li>
+                        <li>
+                            <h3>9/6</h3>
+                            <span>Travelers Rest Farmers Market (9am-12)</span>
+                            <span class="pull-right">Travelers Rest, SC</span>
+                        </li>
+                        <li>
+                            <h3>9/6</h3>
+                            <span>Wedding</span>
+                            <span class="pull-right">Greer, SC</span>
+                        </li>
+                        <li>
+                            <h3>9/8</h3>
+                            <span>Pendleton Manor Fall Festival</span>
+                            <span class="pull-right"></span>
+                        </li>
+                        <li>
+                            <h3>9/9</h3>
+                            <span>Travelers Rest City Employee Appreciation Night</span>
+                            <span class="pull-right"></span>
+                        </li>
+                        <li>
+                            <h3>9/18</h3>
+                            <span>Grove Park Inn Asheville, NC</span>
+                            <span class="pull-right">Asheville, NC</span>
+                        </li>
+                        <li>
+                            <h3>9/20</h3>
+                            <span>Farm Fresh Day @ Rabon Creek Farm(10a-1)</span>
+                            <span class="pull-right">Fountain Inn, SC</span>
+                        </li>
+                        <li>
+                            <h3>9/20</h3>
+                            <span>Private party for ProAxis Therapy</span>
+                            <span class="pull-right">Albino Skunk Farm</span>
+                        </li>
+                        <li>
+                            <h3>9/25</h3>
+                            <span>Oskar Blues</span>
+                            <span class="pull-right">Brevard, NC</span>
+                        </li>
+                        <li>
+                            <h3>9/26</h3>
+                            <span>Merck Mountain Festival</span>
+                            <span class="pull-right"></span>
+                        </li>
+                        <li>
+                            <h3>9/27</h3>
+                            <span>Isis Music Hall </span>
+                            <span class="pull-right">Asheville, NC</span>
                         </li>
                     </ul>   
                 </div>
             </div>
-
             <div class="jumbotron connect" name="connect">
                 <div class="container">
                     <a name="connect"></a>
