--- a/app/index.html
+++ b/app/index.html
@@ -97,64 +97,19 @@
                 <div class="shows">
                     <ul>
                         <li>
-                            <h3>9/4</h3>
-                            <span>Emeritus at Anderson Place: Alzheimer’s Fundraiser</span>
-                            <span class="pull-right"></span>
+                            <h3>1/17</h3>
+                            <span>Gottrocks (8pm)</span>
+                            <span class="pull-right">Greenville, SC</span>
                         </li>
                         <li>
-                            <h3>9/5</h3>
-                            <span>Wedding Rehearsal Party at Cliffs Mountain Barn</span>
-                            <span class="pull-right"></span>
+                            <h3>1/24</h3>
+                            <span>Southern Culture</span>
+                            <span class="pull-right">Greenville, SC</span>
                         </li>
                         <li>
-                            <h3>9/6</h3>
-                            <span>Travelers Rest Farmers Market (9am-12)</span>
-                            <span class="pull-right">Travelers Rest, SC</span>
-                        </li>
-                        <li>
-                            <h3>9/6</h3>
-                            <span>Wedding</span>
-                            <span class="pull-right">Greer, SC</span>
-                        </li>
-                        <li>
-                            <h3>9/8</h3>
-                            <span>Pendleton Manor Fall Festival</span>
-                            <span class="pull-right"></span>
-                        </li>
-                        <li>
-                            <h3>9/9</h3>
-                            <span>Travelers Rest City Employee Appreciation Night</span>
-                            <span class="pull-right"></span>
-                        </li>
-                        <li>
-                            <h3>9/18</h3>
-                            <span>Grove Park Inn Asheville, NC</span>
-                            <span class="pull-right">Asheville, NC</span>
-                        </li>
-                        <li>
-                            <h3>9/20</h3>
-                            <span>Farm Fresh Day @ Rabon Creek Farm(10a-1)</span>
-                            <span class="pull-right">Fountain Inn, SC</span>
-                        </li>
-                        <li>
-                            <h3>9/20</h3>
-                            <span>Private party for ProAxis Therapy</span>
-                            <span class="pull-right">Albino Skunk Farm</span>
-                        </li>
-                        <li>
-                            <h3>9/25</h3>
-                            <span>Oskar Blues</span>
-                            <span class="pull-right">Brevard, NC</span>
-                        </li>
-                        <li>
-                            <h3>9/26</h3>
-                            <span>Merck Mountain Festival</span>
-                            <span class="pull-right"></span>
-                        </li>
-                        <li>
-                            <h3>9/27</h3>
-                            <span>Isis Music Hall </span>
-                            <span class="pull-right">Asheville, NC</span>
+                            <h3>1/31</h3>
+                            <a href="http://www.purpleonionsaluda.com/" target="_blank"><span>The Purple Onion (8pm)</span></a>
+                            <span class="pull-right">Saluda, NC</span>
                         </li>
                     </ul>   
                 </div>
