fixing icons in production

--- a/app/index.html
+++ b/app/index.html
@@ -11,8 +11,8 @@
         <meta name="viewport" content="width=device-width, user-scalable=no">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
         <!-- build:css(.tmp) styles/main.css -->
-        <link rel="stylesheet" href="ss-gizmo/webfonts/ss-gizmo.css"/>
-        <link rel="stylesheet" href="ss-social/webfonts/ss-social.css"/>
+        <link rel="stylesheet" href="styles/ss-gizmo.css"/>
+        <link rel="stylesheet" href="styles/ss-social.css"/>
         <link rel="stylesheet" href="styles/main.css">
         <!-- endbuild -->
     </head>
