--- a/app/index.html
+++ b/app/index.html
@@ -111,6 +111,11 @@
                             <span>Wedding</span></a>
                             <span class="pull-right">Greer, SC</span>
                         </li>
+                        <li>
+                            <h3>3/7</h3>
+                            <span>Florence Civic Center</span></a>
+                            <span class="pull-right">Florence, SC</span>
+                        </li>
                     </ul>   
                 </div>
             </div>
