--- a/app/index.html
+++ b/app/index.html
@@ -97,24 +97,89 @@
                 <div class="shows">
                     <ul>
                         <li>
-                            <h3>2/1</h3>
-                            <span>Super Bowl Party</span>
-                            <span class="pull-right">Concord, NC</span>
+                            <h3>3/21</h3>
+                            <span>Barley's (6-10p)</span>
+                            <span class="pull-right">Spindale, NC</span>
                         </li>
                         <li>
-                            <h3>2/13</h3>
-                            <span>Oscar Blues (6-9p)</span>
-                            <span class="pull-right">Brevard, NC</span>
+                            <h3>3/22</h3>
+                            <span>Cabelas on Woodruff</span>
+                            <span class="pull-right">Greenville, SC</span>
                         </li>
                         <li>
-                            <h3>2/28</h3>
-                            <span>Wedding</span></a>
+                            <h3>3/22</h3>
+                            <span>Hyatt Disaster Manager's Convention</span></a>
+                            <span class="pull-right">Greenville, SC</span>
+                        </li>
+                        <li>
+                            <h3>3/28</h3>
+                            <span>Southern Culture (6:30-10p)</span></a>
+                            <span class="pull-right">Greenville, SC</span>
+                        </li>
+                        <li>
+                            <h3>4/10</h3>
+                            <span>Anderson Wedding @ Lindsay Farms</span></a>
+                            <span class="pull-right">Taylors, SC</span>
+                        </li>
+                        <li>
+                            <h3>4/11</h3>
+                            <span>Wedding @ Walnut Grove Plantation</span></a>
+                            <span class="pull-right">Roebuck, SC</span>
+                        </li>
+                        <li>
+                            <h3>4/16</h3>
+                            <span>Monarch Chorus @ Mauldin High</span></a>
+                            <span class="pull-right">Greenville, SC</span>
+                        </li>
+                        <li>
+                            <h3>4/17</h3>
+                            <span>Merck Mt. Music Festival (7p)</span></a>
+                            <span class="pull-right">Central, SC</span>
+                        </li>
+                        <li>
+                            <h3>4/25</h3>
+                            <span>Project Host Benefit Downtown</span></a>
+                            <span class="pull-right">Greenville, SC</span>
+                        </li>
+                        <li>
+                            <h3>5/1</h3>
+                            <span>Hub Music Festival</span></a>
+                            <span class="pull-right">Augusta, GA</span>
+                        </li>
+                        <li>
+                            <h3>5/2</h3>
+                            <span>Southern Culture (6:30-10p)</span></a>
+                            <span class="pull-right">Greenville, SC</span>
+                        </li>
+                        <li>
+                            <h3>5/9</h3>
+                            <span>Greenville Farmer's Market</span></a>
+                            <span class="pull-right">Greenville, SC</span>
+                        </li>
+                        <li>
+                            <h3>5/15</h3>
+                            <span>Rehearsal Dinner</span></a>
+                            <span class="pull-right">Lake Lure, NC</span>
+                        </li>
+                        <li>
+                            <h3>5/16</h3>
+                            <span>Cystic Fibrosis Walk (9a)</span></a>
                             <span class="pull-right">Greer, SC</span>
                         </li>
                         <li>
-                            <h3>3/7</h3>
-                            <span>Florence Civic Center</span></a>
-                            <span class="pull-right">Florence, SC</span>
+                            <h3>5/21</h3>
+                            <span>Men's Member Golf Tournament</span></a>
+                            <span class="pull-right">The Cliffs</span>
+                        </li>
+                        <li>
+                            <h3>5/22</h3>
+                            <span>Barley's (6-10p)</span></a>
+                            <span class="pull-right">Spindale, NC</span>
+                        </li>
+                        <li>
+                            <h3>5/23</h3>
+                            <span>Wedding @ Old Edward Inn</span></a>
+                            <span class="pull-right">Highlands, NC</span>
                         </li>
                     </ul>   
                 </div>
